--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,501 +1,8 @@
-aif360==0.5.0
-aiohttp==3.8.6
-aiosignal==1.3.1
-alabaster==0.7.12
-anndata==0.10.1
-anyio==3.7.0
-AnyQt==0.2.0
-appdirs==1.4.4
-apturl==0.5.2
-argcomplete==3.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-array-api-compat==1.4
-arrow==1.2.3
-asgiref==3.7.2
-asteval==0.9.31
-astor==0.8.1
-astroid==2.9.3
-async-lru==2.0.2
-async-timeout==4.0.3
-atomicwrites==1.4.0
-attrs==23.2.0
-autograd==1.6.2
-autograd-gamma==0.5.0
-autopep8==1.6.0
-awscrt==0.16.26
-Babel==2.12.1
-backcall==0.2.0
-backoff==2.2.1
-backports.functools-lru-cache==1.6.6
-baycomp==1.0.3
-bcrypt==3.2.0
-beautifulsoup4==4.12.2
-beniget==0.4.1
-biopython==1.81
-black==21.10b0
-bleach==4.1.0
-blinker==1.4
-boto3==1.28.62
-boto3-stubs==1.28.62
-botocore==1.31.62
-botocore-stubs==1.31.62
-Bottleneck==1.3.7
-Brlapi==0.8.3
-Brotli==1.0.9
-cachetools==5.0.0
-catboost==1.2.2
-cattrs==23.1.2
-censys==2.2.1
-certifi==2023.7.22
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.1.0
-chromedriver-binary==128.0.6583.0.0
-Click==7.0
-click-plugins==1.1.1
-cloudpickle==2.0.0
-cmsmap @ file:///usr/share/sniper/plugins/CMSmap
-colorama==0.4.4
-colorcet==3.0.1
-command-not-found==0.3
-commonmark==0.9.1
-conllu==4.5.3
-cryptography==3.4.8
-cupshelpers==1.0
-cycler==0.11.0
-dblatex==0.3.12
-dbus-python==1.2.18
-debugpy==1.6.7
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.7.1
-dictdiffer==0.9.0
-diff-match-patch==20200713
-distlib==0.3.8
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-dj-database-url==2.3.0
-dj-static==0.0.6
-Django==4.2.2
-djangorestframework==3.15.2
-dnsgen==1.0.4
-dnspython==2.1.0
-docopt==0.6.2
-docutils==0.17.1
-docx2txt==0.8
-dtrx==8.2.2
-duplicity==0.8.21
-EditorConfig==0.12.2
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-extranormal3==0.0.3
-fastdtw==0.3.2
-fasteners==0.14.1
-fastjsonschema==2.17.1
-feedparser==6.0.8
-filelock==3.12.4
-Flask==2.0.1
-fonttools==4.29.1
-formulaic==0.6.6
-fpdf==1.7.2
-fqdn==1.5.1
-frozendict==2.3.8
-frozenlist==1.4.0
-fs==2.4.12
-future==0.18.2
-gast==0.5.2
-GDAL==3.6.4
-Genesis-PyAPI==1.2.1
-gensim==4.3.2
-geographiclib==2.0
-geopy==2.3.0
-gitsome==0.8.0
-google-api-python-client==1.7.11
-google-auth==1.5.1
-google-auth-httplib2==0.1.0
-graphviz==0.20.1
-greenlet==1.1.2
-gyp==0.1
-h11==0.13.0
-h2==4.1.0
-h5py==3.9.0
-h8mail==2.5.6
-helpdev==0.7.1
-hpack==4.0.0
-html5lib==1.1
-httpcore==0.18.0
-httplib2==0.20.2
-httpx==0.25.0
-hyperframe==6.0.0
-idna==2.7
-imagesize==1.3.0
-IMDbPY==2021.4.18
-importlib-metadata==4.6.4
-interface-meta==1.3.0
-intervaltree==3.0.2
-ipaddress==1.0.23
-ipykernel==6.7.0
-ipython==7.31.1
-ipython_genutils==0.2.0
-isoduration==20.11.0
-isort==5.6.4
-itsdangerous==2.1.0
-jaraco.classes==3.3.0
-jedi==0.18.0
-jeepney==0.7.1
-jellyfish==1.0.1
-Jinja2==3.0.3
-jmespath==1.0.1
-joblib==1.3.2
-jsbeautifier==1.14.0
-json5==0.9.14
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter-server==1.24.0
-jupyter_client==7.4.1
-jupyter_core==5.3.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.1
-jupyterlab-pygments==0.1.2
-jupyterlab_server==2.22.1
-kaitaistruct==0.9
-keyring==23.5.0
-keyrings.alt==5.0.0
-kiwisolver==1.3.2
-langdetect==1.0.9
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy-object-proxy==0.0.0
-ldap3==2.8.1
-lemmagen3==3.5.0
-lifelines==0.27.8
-LinkFinder==1.0
-llvmlite==0.41.0
-lmfit==1.2.2
-lockfile==0.12.2
-logilab-common==1.8.2
-loompy==3.0.7
-louis==3.20.0
-LTTL==2.0.12
-lxml==4.9.3
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.3
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mdurl==0.1.2
-mercurial==6.1.1
-mistune==2.0.5
-mitmproxy==6.0.2
-mock==4.0.3
-monotonic==1.6
-more-itertools==8.10.0
-MouseInfo==0.1.3
-mpmath==0.0.0
-msgpack==1.0.3
-multidict==6.0.4
-multitasking==0.0.11
-mypy-boto3-s3==1.28.55
-mypy-extensions==0.4.3
-mysqlclient==2.1.1
-natsort==8.4.0
-nbclassic==1.0.0
-nbclient==0.5.6
-nbconvert==7.4.0
-nbformat==5.9.0
-ndf==0.1.4
-nest-asyncio==1.5.4
-netaddr==0.8.0
-netifaces==0.11.0
-networkx==3.1
-nltk==3.8.1
-notebook==6.5.4
-notebook_shim==0.2.3
-numba==0.58.0
-numpy==1.23.5
-numpy-groupies==0.10.2
-numpydoc==1.2
-oauth2client==4.1.3
-oauthlib==3.2.0
-odfpy==1.4.1
-olefile==0.46
-openai==0.28.1
-opencv-contrib-python-headless==4.10.0.84
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-openpyxl==3.1.2
-openTSNE==1.0.0
-orange-canvas-core==0.1.33
-Orange-Spectroscopy==0.6.11
-orange-widget-base==4.22.0
-Orange3==3.36.1
-Orange3-Associate==1.3.0
-Orange3-Bioinformatics==4.8.0
-Orange3-Educational==0.7.1
-Orange3-Explain==0.6.6
-Orange3-Fairness==0.1.6
-Orange3-Geo==0.4.0
-Orange3-ImageAnalytics==0.12.1
-Orange3-Network==1.8.0
-Orange3-Prototypes==0.19.0
-Orange3-SingleCell==1.5.0
-Orange3-Survival-Analysis==0.5.1
-Orange3-Text==1.14.0
-Orange3-Textable==3.1.11
-Orange3-Timeseries==0.6.0
-Orange3-WorldHappiness==0.1.9
-outcome==1.3.0.post0
-overrides==7.3.1
-owlready2==0.44
-OWSLib==0.28.1
-packaging==21.3
-pandas==2.0.3
-pandas-datareader==0.10.0
-pandocfilters==1.5.0
-param==1.13.0
-paramiko==2.9.3
-parso==0.8.1
-passlib==1.7.4
-pathspec==0.9.0
-patsy==0.5.3
-pbr==5.8.0
-pdfminer3k==1.3.4
-Pebble==5.0.3
-peewee==3.16.3
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==10.4.0
-Pivy==0.6.5
-platformdirs==4.2.0
-plotly==5.4.0
-pluggy==0.13.0
-pluginbase==1.0.1
-ply==3.11
-point-annotator==2.0.0
-progressbar==2.5
-prometheus-client==0.17.0
-prompt-toolkit==3.0.28
-protobuf==3.12.4
-psutil==5.9.0
-psycopg2==2.9.2
-ptyprocess==0.7.0
-publicsuffix2==2.20191221
-py==1.10.0
-py-altdns==1.0.2
-pyaes==1.6.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-PyAutoGUI==0.9.54
-pybind11==2.11.1
-pycairo==1.20.1
-pyclipper==1.3.0.post5
-pycodestyle==2.8.0
-pycountry==22.3.5
-pycparser==2.21
-pycryptodomex==3.11.0
-pyct==0.5.0
-pycups==2.0.1
-pydocstyle==6.1.1
-PyDrive==1.3.1
-pyflakes==2.4.0
-pygame==2.6.1
-PyGetWindow==0.0.9
-Pygments==2.16.1
-PyGObject==3.42.1
-pyinotify==0.9.6
-PyJWT==2.3.0
-pylint==2.12.2
-pyls-black==0.4.6
-pyls-spyder==0.4.0
-pymacaroons==0.13.0
-pymongo==4.5.0
-PyMsgBox==1.0.9
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-PyPDF2==3.0.1
-pyperclip==1.8.2
-pyproj==3.4.0
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-pyqtgraph==0.13.3
-PyQtWebEngine==5.15.5
-PyRect==0.2.0
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PyScreeze==0.1.30
-pyserial==3.5
-PySocks==1.7.1
-pystache==0.6.6
-pysvn==1.9.15
-python-apt==2.4.0+ubuntu4
-python-crontab==2.3.9
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-decouple==3.8
-python-dotenv==1.0.0
-python-gnupg==0.4.8
-python-json-logger==2.0.7
-python-jsonrpc-server==0.4.0
-python-language-server==0.36.2
-python-louvain==0.16
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.3.3
-python-magic==0.4.24
-python3-xlib==0.15
-pythran==0.10.0
-pytweening==1.2.0
-pytz==2023.3.post1
-pyxattr==0.7.2
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==25.1.0
-qasync==0.24.2
-QDarkStyle==2.8.1
-QScintilla==2.11.6
-QtAwesome==1.1.1
-qtconsole==5.2.2
-QtPy==2.0.0
-regex==2023.10.3
-renishawWiRE==0.1.16
-reportlab==3.6.8
-requests==2.31.0
-requests-cache==1.1.0
-requests-file==1.5.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-resdk==19.0.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.6.0
-roman==3.3
-rope==0.22.0
-rsa==4.8
-ruamel.yaml==0.17.16
-ruamel.yaml.clib==0.2.6
-s3transfer==0.7.0
-scikit-learn==1.1.3
-scipy==1.11.3
-seaborn==0.13.2
-SecretStorage==3.3.1
-segtok==1.5.11
-selenium==4.22.0
-Send2Trash==1.8.2
-serverfiles==0.3.1
-setproctitle==1.2.2
-sgmllib3k==1.0.0
-shap==0.42.1
-shapely==2.0.1
-shodan==1.26.1
-simhash==2.1.2
-simplejson==3.17.6
-single-sample-gsea==0.2.0
-six==1.16.0
-slicer==0.0.7
-slumber==0.7.1
-smart-open==6.4.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.1.0
-soupsieve==2.3.1
-spectral==0.23.1
-Sphinx==4.3.2
-spyder==4.2.1
-spyder-kernels==1.10.2
-SQLAlchemy==1.4.31
-sqlparse==0.4.4
-ssh-import-id==5.11
-static==1.1.1
-static3==0.7.0
-statsmodels==0.14.0
-sympy==1.9
-systemd-python==234
-tabulate==0.9.0
-Telethon==1.36.0
-tenacity==6.3.1
-termcolor==1.1.0
-terminado==0.17.1
-testpath==0.5.0
-textdistance==4.2.2
-threadpoolctl==3.2.0
-three-merge==0.1.1
-tiktoken==0.5.1
-tinycss2==1.2.1
-tldextract==2.2.0
-toml==0.10.2
-tomli==1.2.2
-tornado==6.3.2
-tqdm==4.66.1
-traitlets==5.9.0
-treetaggerwrapper==2.3
-trimesh==3.23.5
-trio==0.26.0
-trio-websocket==0.11.1
-tweepy==4.14.0
-types-awscrt==0.19.2
-types-s3transfer==0.7.0
-typing_extensions==4.12.2
-tzdata==2023.3
-tzlocal==5.1
-ubuntu-drivers-common==0.0.0
-Ubuntu-Make==18.9
-ubuntu-pro-client==8001
-ufal.udpipe==1.3.0.1
-ufoLib2==0.13.1
-ufw==0.36.1
-ujson==5.1.0
-unattended-upgrades==0.1
-uncertainties==3.1.7
-unicodedata2==14.0.0
-uri-template==1.2.0
-uritemplate==3.0.1
-url-normalize==1.4.3
-urllib3==2.2.2
-urwid==2.1.2
-usb-creator==0.3.7
-vboxapi==1.0
-virtualenv==20.25.1
-voila==0.4.0
-wadllib==1.3.6
-wafw00f==2.1.0
-watchdog==2.1.6
-wbgapi==1.0.12
-wcwidth==0.2.5
-webcolors==1.13
-webdriver-manager==4.0.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==11.0.3
-webtech==1.3.4
-Werkzeug==2.0.2
-wifite==2.6.0
-wikipedia==1.4.0
-WoeUSB-ng==0.2.12
-wrapt==1.13.3
-wsproto==1.0.0
-wurlitzer==3.0.2
-wxPython==4.0.7
-xdg==5
-xgboost==2.0.0
-xkit==0.0.0
-xlrd==1.2.0
-XlsxWriter==3.0.2
-xlwt==1.3.0
-xonsh==0.11.0
-yake==0.4.8
-yapf==0.32.0
-yarl==1.9.2
-yellowbrick==1.5
-yfinance==0.2.31
-youtube-dl==2021.12.17
-zipp==1.0.0
+dj-database-url
+dj-static
+Django
+Pillow
+psycopg2
+python-decouple
+pytz
+static
