--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
--r requirements-dev.txt
-gunicorn
-psycopg2
+asgiref==3.8.1
+dj-database-url==2.3.0
+dj-static==0.0.6
+Django==5.1.4
+pillow==11.0.0
+python-decouple==3.8
+pytz==2024.2
+sqlparse==0.5.3
+static3==0.7.0
+typing_extensions==4.12.2
