--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@ asgiref==3.8.1
 dj-database-url==2.3.0
 dj-static==0.0.6
 Django==5.1.4
+django-bootstrap-form==3.4
 pillow==11.0.0
 python-decouple==3.8
 pytz==2024.2
 sqlparse==0.5.3
 static3==0.7.0
 typing_extensions==4.12.2
-django
-gunicorn
-psycopg2-binary
