--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.3.0
 dj-static==0.0.6
 Django==5.1.4
 django-bootstrap-form==3.4
+gunicorn==23.0.0
+packaging==24.2
 pillow==11.0.0
 python-decouple==3.8
 pytz==2024.2
